--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -53,6 +53,6 @@ hi:
   smooch_bot_ask_for_confirmation: |-
       इस संदेश को भेजने के लिए धन्यवाद। क्या आपको संदेह है कि यह भारतीय आम चुनाव 2019 से संबंधित गलत सूचना है? अगर आप हां करते हैं तो 1 लिखें। कुछ और लिखेंगे तो हम संपर्क जारी नहीं रख सकेंगे।
   smooch_bot_window_closing: टिपलाइन में अनुरोधों की संख्या बहुत अधिक है और अभी तक आपके अनुरोध का समाधान नहीं कर पाए हैं। सबमिट करने के लिए धन्यवाद। यदि आपके पास सबमिट करने के लिए कोई और संदेश है तो प्रेषित करें।
-  smooch_bot_not_final: '[सत्यापन रिपोर्ट - सुधार] आपके द्वारा हमारे साथ साझा किया गया संदेश गलत तरीके से चिह्नित किया गया था। *%{status}* आगे के सत्यापन के लिए यह अभी भी हमारी पंक्ति में है।'
+  smooch_bot_not_final: "[सत्यापन रिपोर्ट - सुधार] आपके द्वारा हमारे साथ साझा किया गया संदेश गलत तरीके से चिह्नित किया गया था। *%{status}* आगे के सत्यापन के लिए यह अभी भी हमारी पंक्ति में है।"
   smooch_bot_result_changed: |-
       [सत्यापन रिपोर्ट - सुधार] आपके द्वारा हमारे साथ साझा किया संदेश बदल गया है *%{previous_status}* से *%{status}* इसे निर्धारित करने के लिए हमने यहां पहल की है:%{url}
