--- a/config/locales/ml.yml
+++ b/config/locales/ml.yml
@@ -152,7 +152,7 @@ ml:
   smooch_bot_ask_for_confirmation: |-
       താങ്കളുടെ സന്ദേശത്തിന് നന്ദി. ഇത് 2019ലെ ലോക് സഭാ തെരഞ്ഞെടുപ്പുമായി ബന്ധപ്പെട്ട വ്യാജവിവരമാണെന്ന് സംശയമുണ്ടോ ? ഉണ്ടെങ്കില്‍ 1 എന്ന് മറുപടി അയക്കകുക. ഇല്ലെങ്കില്‍ ഈ സംഭാഷണം ഇവിടെ അവസാനിപ്പിക്കാം.
   smooch_bot_window_closing: ടിപ് ലൈനിലേക്ക് കിട്ടുന്ന ചോദ്യങ്ങളുടെ എണ്ണം വളരെ വലുതാണ്. താങ്കളുടെ വിഷയത്തിന് ഇതുവരെ പരിഹാരം കാണാനായിട്ടില്ല. എന്നിരുന്നാലും ബന്ധപ്പെട്ടതിന് നന്ദി. മറ്റെന്തെലും വിഷയമുണ്ടെങ്കില്‍ അതും ഉന്നയിക്കൂ.
-  smooch_bot_not_final: '[പരിശോധനാ റിപ്പോര്‍ട്ട്-തിരുത്ത്] താങ്കളയച്ച സന്ദേശം *1%{status} * എന്ന് തെറ്റായി അടയാളപ്പെടുത്തിയതാണ്. അത് ഇപ്പോഴും പരിശോധനക്കായുള്ള വരിയിലാണ്. '
+  smooch_bot_not_final: "[പരിശോധനാ റിപ്പോര്‍ട്ട്-തിരുത്ത്] താങ്കളയച്ച സന്ദേശം *1%{status} * എന്ന് തെറ്റായി അടയാളപ്പെടുത്തിയതാണ്. അത് ഇപ്പോഴും പരിശോധനക്കായുള്ള വരിയിലാണ്. "
   smooch_bot_result_changed: |-
       താങ്കളുടെ  *%{previous_status}* എന്നടയാളപ്പെടുത്തിയിരുന്ന സന്ദേശം
       *%{status}*
