--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -209,7 +209,6 @@ ru:
   mail_view_rejected_to_join: Извините, но ваш запрос на вступление в %{team} не был одобрен.
   mail_view_request_to_join: "От пользователя %{user} (%{handle}) поступила заявка на вступление в группу %{team} (%{app_name})!"
   mail_view_process_request: 'Чтобы обработать запрос, авторизуйтесь и перейдите по ссылке:'
-  pender_could_not_parse: Не удалось обработать медиа-объект
   mail_duplicate_email_exists: Ваш способ входа в %{app_name}
   mail_duplicate_email_exists_body: "<p>Здравствуйте! При вашей попытке входа в %{app_name} произошла небольшая ошибка.</p> <p>Что произошло: вы попытались войти в %{app_name} через аккаунт в %{user_provider}, привязанный к адресу %{user_email}, но этот адрес уже используется в %{app_name} для входа через %{duplicate_provider}.</p> <p>Что делать: выберите вход через %{duplicate_provider}, чтобы войти в свой аккаунт.</p> <p>Вы попадёте в аккаунт, которым пользовались раньше. Если проблема повторяется или что-то не работает так, как должно, свяжитесь с нами по адресу %{support_email}.</p> <p>— Команда %{app_name}</p>"
   mail_duplicate_email_exists_body_both_emails: "<p>Здравствуйте! При вашей попытке входа в %{app_name} произошла небольшая ошибка.</p> <p>Что произошло: вы попытались создать новый аккаунт в %{app_name}, но аккаунт с таким адресом e-mail уже существует.</p> <p>Попробуйте войти с вашим e-mail и паролем вместо того, чтобы регистрировать новый аккаунт. Если вы не помните пароль, воспользуйтесь функцией восстановления.</p> <p>Если проблема повторяется или что-то не работает так, как должно, свяжитесь с нами по адресу %{support_email}.</p> <p>— Команда %{app_name}</p>"
@@ -298,9 +297,6 @@ ru:
   max_number_of_team_users_reached: Извините, в этой группе достигнут лимит участников
   max_number_of_projects_reached: Извините, в этой группе достигнут лимит проектов
   cant_set_custom_statuses: Извините, для данной группы не включены дополнительные статусы
-  cant_change_custom_statuses: |-
-      Извините, нельзя отредактировать дополнительные статусы, поскольку они уже назначены. Статусы %{statuses} используются в следующих материалах:
-      %{urls} %{others_amount}
   cant_create_team_task: Извините, у вашей группы нет доступа к данной функциональности
   cant_create_media_under_this_team_using_extension: Извините, для данной группы не включено браузерное расширение
   error_invalid_attribution: Неверное авторство
@@ -338,27 +334,27 @@ ru:
   mail_subject_delete_user: "[%{team}] Пользователь был удалён"
   mail_body_delete_user: Аккаунт пользователя был удален. Автор созданного контента теперь будет указан как анонимный пользователь %{id}.
   mail_security:
-    device_subject: "Внимание: Новый вход в %{app_name} через %{browser} на %{platform}"
-    ip_subject: "Внимание: Нетипичный вход в %{app_name}"
-    failed_subject: "Внимание: Неудачные попытки входа в %{app_name}"
-    ip: "Вход выполнен из %{location}"
-    device: "Вход выполнен через %{browser} на %{platform}"
+    device_subject: 'Внимание: Новый вход в %{app_name} через %{browser} на %{platform}'
+    ip_subject: 'Внимание: Нетипичный вход в %{app_name}'
+    failed_subject: 'Внимание: Неудачные попытки входа в %{app_name}'
+    ip: Вход выполнен из %{location}
+    device: Вход выполнен через %{browser} на %{platform}
     devise_name: "%{browser} на %{platform}"
-    failed: "Обнаружены неудачные попытки входа"
-    password_text: "немедленно сбросить пароль."
-    device_text: "Кажется, вы недавно выполнили вход в %{app_name} с нового устройства. Если это были не вы, вам нужно %{change_password}"
-    ip_text: "Кажется, вы недавно выполнили вход в %{app_name} из нового места. Если это были не вы, вам нужно %{change_password}"
-    failed_text: "Кажется, было выполнено несколько попыток входа в ваш аккаунт %{app_name} подряд. Если это были вы, можно проигнорировать это предупреждение. Если нет, вам нужно %{change_password}"
-    time_h: "Время"
-    device_h: "Устройство"
-    location_h: "Местонахождение"
+    failed: Обнаружены неудачные попытки входа
+    password_text: немедленно сбросить пароль.
+    device_text: Кажется, вы недавно выполнили вход в %{app_name} с нового устройства. Если это были не вы, вам нужно %{change_password}
+    ip_text: Кажется, вы недавно выполнили вход в %{app_name} из нового места. Если это были не вы, вам нужно %{change_password}
+    failed_text: Кажется, было выполнено несколько попыток входа в ваш аккаунт %{app_name} подряд. Если это были вы, можно проигнорировать это предупреждение. Если нет, вам нужно %{change_password}
+    time_h: Время
+    device_h: Устройство
+    location_h: Местонахождение
     location_disclaimer: "* Местоположение определено по IP-адресу и может быть неточным."
-    ip_h: "IP-адрес"
+    ip_h: IP-адрес
     privacy: "%{manage} e-mail уведомления • Ознакомьтесь с нашей %{privacy}"
-    privacy_text: 'политикой конфиденциальности'
-    manage_text: 'Настройте'
-    privace_manage_plain: "Настроить e-mail уведомления"
-    privacy_plain: "Ознакомьтесь с нашей политикой конфиденциальности"
+    privacy_text: политикой конфиденциальности
+    manage_text: Настройте
+    privace_manage_plain: Настроить e-mail уведомления
+    privacy_plain: Ознакомьтесь с нашей политикой конфиденциальности
   archive_keep_backup: Сохранённые видео
   archive_pender_archive: Скриншоты Keep
   archive_archive_is: Archive.is
@@ -401,7 +397,7 @@ ru:
 
       Если да, *отправьте 1*. Любой другой ответ завершит беседу.
   smooch_bot_window_closing: В настоящее время нам поступает очень много запросов, и ваш всё ещё находится в очереди. Спасибо за сообщение. Если вы хотите отправить ещё материалы, пожалуйста, не стесняйтесь!
-  smooch_bot_not_final: '[Отчёт о верификации — ИЗМЕНЕНИЕ] Сообщение, которое вы нам отправили, было некорректно отмечено как «*%{status}*». Сообщение возвращено в очередь и ожидает верификации.'
+  smooch_bot_not_final: "[Отчёт о верификации — ИЗМЕНЕНИЕ] Сообщение, которое вы нам отправили, было некорректно отмечено как «*%{status}*». Сообщение возвращено в очередь и ожидает верификации."
   smooch_bot_result_changed: |-
       [Отчёт о верификации — ИЗМЕНЕНИЕ] Сообщение, которое вы нам отправили, получило новую отметку: «*%{status}*» (ранее отмечено как «*%{previous_status}*»).
 
