--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -211,7 +211,6 @@ ar:
   mail_view_rejected_to_join: عذراً ، لم تتم الموافقة على طلبك للإنضمام إلى فريق %{team}
   mail_view_request_to_join: "لقد طلب %{user} (%{handle}) الانضمام لفريق %{team} على %{app_name}"
   mail_view_process_request: 'لمعالجة هذا الطلب برجاء تسجيل الدخول وزيارة '
-  pender_could_not_parse: عذراً ، لقد واجهنا خطأ ما اثناء تحليل الميديا. من فضلك أعد المحاولة وتواصل مع فريق الدعم إن استمر الخطأ.
   mail_duplicate_email_exists: كيفية تسجيل الدخول على %{app_name} الخاصة بك
   mail_duplicate_email_exists_body: "<p>مرحباً — نود أن نساعدك لتسجيل الدخول على %{app_name}.</p> <p>\nما الذي حدث؟ لقد حاولت تسجيل حساب جديد على %{app_name} باستخدام بريد إلكتروني مسجل بالفعل.</p> <p>\nحاول تسجيل الدخول باستخدام البريد الإلكتروني وكلمة المرور بدلاً من إنشاء حساب جديد.</p> <p>\nبذلك ستدخل إلى %{app_name} باستخدام نفس الحساب المسجل سابقاً. للمزيد من المساعدة ارسل لنا على البريد الإلكتروني %{support_email}.</p> <p>\n— فريق عمل %{app_name}</p>"
   mail_duplicate_email_exists_body_both_emails: "<p>مرحباً — نود أن نساعدك لتسجيل الدخول على %{app_name}.</p> <p>\nما الذي حدث؟ لقد حاولت تسجيل حساب جديد على %{app_name} باستخدام بريد إلكتروني مسجل بالفعل.</p> <p>\nحاول تسجيل الدخول باستخدام البريد الإلكتروني وكلمة المرور بدلاً من إنشاء حساب جديد.</p> <p>\nبذلك ستدخل إلى %{app_name} باستخدام نفس الحساب المسجل سابقاً. للمزيد من المساعدة ارسل لنا على البريد الإلكتروني %{support_email}.</p> <p>\n— فريق عمل %{app_name}</p>"
@@ -306,9 +305,6 @@ ar:
   max_number_of_team_users_reached: عذراً ، لقد تم الوصول إلى الحد الأقصى للأعضاء في هذا الفريق
   max_number_of_projects_reached: عذراً ، لقد تم الوصول إلى الحد الأقصى للمشاريع في هذا الفريق
   cant_set_custom_statuses: عذراً ، خاصية حالات التحقق المتخصصة غير متاحة لهذا الفريق
-  cant_change_custom_statuses: |-
-      عذرًا ، لا يمكن تعديل تعريفات الحالة لأن بعض الحالات قد تصير مفقودة. مُعرّفات الحالة اﻵتية : %{statuses} قيد الاستخدام للعناصر التالية :
-      %{others_amount} %{urls}
   cant_create_team_task: عذراً ، هذه الخاصية غير متاحة لهذا الفريق
   cant_create_media_under_this_team_using_extension: عذراً ، خاصية ملحق المتصفح غير متاحة لهذا الفريق
   error_invalid_attribution: إسناد غير صالح
@@ -346,27 +342,27 @@ ar:
   mail_subject_delete_user: "[%{team}] تم حذف مستخدم"
   mail_body_delete_user: تم حذف حساب مستخدم ونقل المحتوى الخاص به لمستخدم مجهول معرّفه %{id}
   mails_notifications:
-    greeting: "مرحباً %{name}"
-    project_view: "عرض المشروع"
-    unsubscribe: 'إلغاء الاشتراك'
+    greeting: مرحباً %{name}
+    project_view: عرض المشروع
+    unsubscribe: إلغاء الاشتراك
     unsubscribe_link: "%{unsubscribe} من هذه الإخطارات"
-    copyright_html: "%{app_name} من <a href=\"https://meedan.com\">Meedan</a>"
+    copyright_html: '%{app_name} من <a href="https://meedan.com">Meedan</a>'
     task_resolved:
       subject: "[%{team} - %{project}] تمت اجابة مهمة"
-      header_title: 'تمت اجابة مهمة'
+      header_title: تمت اجابة مهمة
       header_text: "قام(ت) %{author} باجابة مهمة في مشروع %{project} التابع الى %{team}."
-      section_title: 'من أو ما هو مصدر الإدعاء ؟'
-      status: 'الحالة'
-      media_h: 'الميديا'
+      section_title: من أو ما هو مصدر الإدعاء ؟
+      status: الحالة
+      media_h: الميديا
     media_status:
-      label: 'الميديا'
+      label: الميديا
       subject: "[%{team} - %{project}] تم تغيير حالة العنصر إلى %{status}"
-      header_title: 'تم تحديث حالة الميديا'
+      header_title: تم تحديث حالة الميديا
       header_text: "قام(ت) %{author} بتحديث عنصر في مشروع %{project} التابع الى %{team}."
-      section_title: "تم التصنيف أنه %{status}."
-      added_to: "تمت الإضافة الى %{app_name}"
-      update_h: 'آخر تحديث'
-      tasks_h: 'تم اكتمال بعض المهام'
+      section_title: تم التصنيف أنه %{status}.
+      added_to: تمت الإضافة الى %{app_name}
+      update_h: آخر تحديث
+      tasks_h: تم اكتمال بعض المهام
     assignment:
       assign_task_subject: "[%{team} - %{project}] تم تكليف مهمة إليك"
       unassign_task_subject: "[%{team} - %{project}] تم إلغاء تكليف مهمة عنك"
@@ -374,44 +370,44 @@ ar:
       unassign_project_subject: "[%{team} - %{project}] تم إلغاء تكليف مشروع عنك"
       assign_media_subject: "[%{team} - %{project}] تم تكليف عنصر إليك"
       unassign_media_subject: "[%{team} - %{project}] تم إلغاء تكليف العنصر عنك"
-      assign_project_title: 'تكليف مشروع'
-      unassign_project_title: 'إلغاء تكليف مشروع'
+      assign_project_title: تكليف مشروع
+      unassign_project_title: إلغاء تكليف مشروع
       assign_project_text: "قام(ت) %{author} بتكليف مشروع %{project} التابع الى %{team}."
       unassign_project_text: "قام(ت) %{author} بالغاء تكليف مشروع %{project} التابع الى %{team}."
-      assign_task_title: 'تكليف مهمة'
-      unassign_task_title: 'إلغاء تكليف مهمة'
+      assign_task_title: تكليف مهمة
+      unassign_task_title: إلغاء تكليف مهمة
       assign_task_text: "قام(ت) %{author} بتكليف مهمة في مشروع %{project} التابع الى %{team}."
       unassign_task_text: "قام(ت) %{author} بالغاء تكليف مهمة في مشروع %{project} التابع الى %{team}."
-      assign_media_title: 'تكليف عنصر'
-      unassign_media_title: 'إلغاء تكليف عنصر'
+      assign_media_title: تكليف عنصر
+      unassign_media_title: إلغاء تكليف عنصر
       assign_media_text: "قام(ت) %{author} بتكليف عنصر في مشروع %{project} التابع الى %{team}."
       unassign_media_text: "قام(ت) %{author} بالغاء تكليف عنصر في مشروع %{project} التابع الى %{team}."
       assign_log: "قام(ت) %{author} بتكليف %{model} الى %{username}"
       unassign_log: "قام(ت) %{author} بإلغاء تكليف %{model} عن %{username}"
-      assign_by: 'تكليف من'
-      unassign_by: 'قام(ت) بإلغاء التكليف'
+      assign_by: تكليف من
+      unassign_by: قام(ت) بإلغاء التكليف
   mail_security:
-    device_subject: "تنبيه الأمان : تسجيل دخول جديد على %{app_name} من %{browser} على %{platform}"
-    ip_subject: "تنبيه الأمان : تسجيل دخول جديد أو غير معهود على %{app_name}"
-    failed_subject: "تنبيه الأمان : محاولات فاشلة لتسجيل الدخول على %{app_name}"
-    ip: "لقد قمت بتسجيل الدخول من %{location}"
-    device: "لقد قمت بتسجيل الدخول من %{browser} على %{platform}"
+    device_subject: 'تنبيه الأمان : تسجيل دخول جديد على %{app_name} من %{browser} على %{platform}'
+    ip_subject: 'تنبيه الأمان : تسجيل دخول جديد أو غير معهود على %{app_name}'
+    failed_subject: 'تنبيه الأمان : محاولات فاشلة لتسجيل الدخول على %{app_name}'
+    ip: لقد قمت بتسجيل الدخول من %{location}
+    device: لقد قمت بتسجيل الدخول من %{browser} على %{platform}
     devise_name: "%{browser} على %{platform}"
-    failed: "تم اكتشاف محاولات فاشلة لتسجيل الدخول"
-    password_text: "إعادة تعيين كلمة المرور الخاصة بك حالاً"
-    device_text: "يبدو أنك سجلت الدخول مؤخرًا إلى حسابك على %{app_name} من جهاز جديد. إذا لم يكن أنت ، فمن اﻷفضل %{change_password}"
-    ip_text: "يبدو أنك سجلت الدخول مؤخرًا إلى حسابك على %{app_name} من موقع جديد. إذا لم يكن أنت ، فمن اﻷفضل %{change_password}"
-    failed_text: "يبدو أنه قد أجريت محاولات متعددة لتسجيل الدخول إلى حسابك على %{app_name}. إذا كان أنت ، يمكنك تجاهل هذه الرسالة. إذا لم يكن أنت ، فمن اﻷفضل %{change_password}"
-    time_h: "الوقت"
-    device_h: "جهاز"
-    location_h: "الموقع"
+    failed: تم اكتشاف محاولات فاشلة لتسجيل الدخول
+    password_text: إعادة تعيين كلمة المرور الخاصة بك حالاً
+    device_text: يبدو أنك سجلت الدخول مؤخرًا إلى حسابك على %{app_name} من جهاز جديد. إذا لم يكن أنت ، فمن اﻷفضل %{change_password}
+    ip_text: يبدو أنك سجلت الدخول مؤخرًا إلى حسابك على %{app_name} من موقع جديد. إذا لم يكن أنت ، فمن اﻷفضل %{change_password}
+    failed_text: يبدو أنه قد أجريت محاولات متعددة لتسجيل الدخول إلى حسابك على %{app_name}. إذا كان أنت ، يمكنك تجاهل هذه الرسالة. إذا لم يكن أنت ، فمن اﻷفضل %{change_password}
+    time_h: الوقت
+    device_h: جهاز
+    location_h: الموقع
     location_disclaimer: "* الموقع تقريبي بناءً على عنوان IP الذي نشأ منه."
-    ip_h: "عنوان IP"
+    ip_h: عنوان IP
     privacy: "%{manage} تنبيهات للبريد الإلكتروني الخاصة بك • معرفة المزيد عن %{privacy}"
-    privacy_text: 'سياسة الخصوصية'
-    manage_text: 'إدارة'
-    privace_manage_plain: "إدارة تنبيهات للبريد الإلكتروني الخاصة بك"
-    privacy_plain: "معرفة المزيد عن سياسة الخصوصية"
+    privacy_text: سياسة الخصوصية
+    manage_text: إدارة
+    privace_manage_plain: إدارة تنبيهات للبريد الإلكتروني الخاصة بك
+    privacy_plain: معرفة المزيد عن سياسة الخصوصية
   archive_keep_backup: Video Vault
   archive_pender_archive: لقطات الشاشة من Keep
   archive_archive_is: Archive.is
@@ -454,7 +450,7 @@ ar:
 
       ليقول نعم ، * الرجاء الرد بـ 1 *. أي رد آخر سينهي طلبك.
   smooch_bot_window_closing: إن حجم الطلبات مرتفع للغاية ، ولم نتمكن من معالجة طلبك بعد. شكرا لك مرة اخرى على طلبك. إذا كان لديك رسالة أخرى لتقديمها ، فالرجاء القيام بذلك.
-  smooch_bot_not_final: '[تقرير التحقيق - تصحيح] لقد حدث خطأ في تصنيف العنصر الذي أرسلته لنا على أنه *%{status}*. ما زال العنصر في قائمة اﻹنتظار للمزيد من التحقق.'
+  smooch_bot_not_final: "[تقرير التحقيق - تصحيح] لقد حدث خطأ في تصنيف العنصر الذي أرسلته لنا على أنه *%{status}*. ما زال العنصر في قائمة اﻹنتظار للمزيد من التحقق."
   smooch_bot_result_changed: |-
       [تقرير التحقيق - تصحيح] لقد تغير تصنيف العنصر الذي أرسلته لنا من *%{previous_status}* إلى *%{status}*.
 
