--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -447,6 +447,7 @@ en:
       To say yes, *please reply with 1*. Any other response will end our conversation.
   smooch_bot_window_closing: The volume of requests in the tipline is very high, and we haven't been able to resolve your request yet. Thank you for submitting. If you have another message to submit, please do.
   smooch_bot_not_final: "[Verification Report - CORRECTION] The message you shared with us was wrongly marked as *%{status}*. It is still in our queue for further verification."
+  smooch_bot_disabled: Thank you for sending this message. We are unable to send back any verification reports, because this project is no longer active.
   smooch_bot_result_changed: |-
       [Verification Report - CORRECTION] The message you shared with us has changed from *%{previous_status}* to *%{status}*.
 
